# Debug-Log

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmark/: log_benchmark.cpp
examples/: cmake-docs.md  cmake-fetchcontent.md  cmake-gitmodule.md
ext/: CMakeLists.txt
inc/: DebugLog.h
src/: DebugLog.cpp
tests/: LogTest.cpp
